--- a/jenkins/Jenkinsfile.1
+++ b/jenkins/Jenkinsfile.1
@@ -1,5 +1,11 @@
 pipeline {
-    agent { any }
+    agent {
+        docker {
+            image 'maven:3-alpine'
+            label 'awx'
+            args '-v /home/ansible/.m2:/root/.m2'
+        }
+    }
     stages {
         stage('Build') {
             steps {
